force-app/main/default/objects/Guide_Logistics__c/Guide_Logistics__c.object-meta.xml
<CustomObject>
    <label>Guide Logistics</label>
    <nameField>
        <displayFormat>Gl-{0000}</displayFormat>
        <label>Guide Logistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guide Logistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>