force-app/main/default/objects/Guide_Logistics__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipLabel>Guide Logistics</relationshipLabel>
    <relationshipName>Guide_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>