force-app/main/default/objects/Guide_Logistics__c/fields/Guide__c.field-meta.xml
<CustomField>
    <fullName>Guide__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guide</label>
    <referenceTo>Guide__c</referenceTo>
    <relationshipLabel>Guide Logistics</relationshipLabel>
    <relationshipName>Guide_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>