force-app/main/default/objects/Guide_Logistics__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary</label>
    <referenceTo>Itinerary__c</referenceTo>
    <relationshipLabel>Guide Logistics</relationshipLabel>
    <relationshipName>Guide_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>