force-app/main/default/objects/Guide_Logistics__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meal</label>
    <referenceTo>Meal__c</referenceTo>
    <relationshipLabel>Guide Logistics</relationshipLabel>
    <relationshipName>Guide_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>