force-app/main/default/objects/Guide_Logistics__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Type</label>
    <referenceTo>Room_Type__c</referenceTo>
    <relationshipLabel>Guide Logistics</relationshipLabel>
    <relationshipName>Guide_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>