force-app/main/default/objects/Guide_Logistics__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Guide Logistics</relationshipLabel>
    <relationshipName>Guide_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>