force-app/main/default/objects/Guide_Logistics__c/fields/Trip_Option__c.field-meta.xml
<CustomField>
    <fullName>Trip_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip Option</label>
    <referenceTo>Trip_Option__c</referenceTo>
    <relationshipLabel>Guide Logistics</relationshipLabel>
    <relationshipName>Guide_Logistics</relationshipName>
    <type>Lookup</type>
</CustomField>